--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "homepage": "https://Greenfield-Taster.github.io/capital-market",
   "dependencies": {
     "gh-pages": "^6.3.0",
+    "i18n": "^0.15.1",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
