Fix photo output and add styles for photo gallery

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -7,7 +7,7 @@
     "mainImage": "src/assets/constructions/bolnitsa-1/photo-1.JPG",
     "photos": [
       {
-        "url": "../assets/assets/constructions/bolnitsa-1/photo-1.JPG",
+        "url": "src/assets/constructions/bolnitsa-1/photo-1.JPG",
         "alt": "Фото проекту лікарні №1"
       },
       {
