--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://Greenfield-Taster.github.io/capital-market",
   "dependencies": {
+    "firebase": "^11.7.1",
     "gh-pages": "^6.3.0",
     "i18n": "^0.15.1",
     "i18next": "^24.2.3",
