Add more photo paths to the project json

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -427,6 +427,46 @@
       {
         "url": "assets/constructions/park-sadskogo/photo-5.JPG",
         "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-6.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-7.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-8.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-9.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-10.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-11.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-12.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-13.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-14.JPG",
+        "alt": "Фото парку Садського"
+      },
+      {
+        "url": "assets/constructions/park-sadskogo/photo-15.JPG",
+        "alt": "Фото парку Садського"
       }
     ]
   },
@@ -455,6 +495,58 @@
       },
       {
         "url": "assets/constructions/soborny-151/photo-5.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-6.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-7.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-8.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-9.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-10.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-11.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-12.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-13.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-14.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-15.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-16.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-17.JPG",
+        "alt": "Фото проекту Соборний 151"
+      },
+      {
+        "url": "assets/constructions/soborny-151/photo-18.JPG",
         "alt": "Фото проекту Соборний 151"
       }
     ]
