Change descriptions in data

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "Соборний 151",
     "slug": "soborny-151",
-    "description": "Проект реконструкції історичної будівлі на вулиці Соборній, 151. Реставрація фасаду та внутрішніх приміщень із збереженням історичної цінності об'єкта.",
+    "description": "Проект модернізації бомбосховища міської лікарні №1. Включав оновлення фасаду, заміну комунікацій, перепланування та обладнання медичних кабінетів відповідно до сучасних вимог.",
     "mainImage": "assets/constructions/soborny-151/photo-1.JPG",
     "photos": [
       {
@@ -82,9 +82,9 @@
   },
   {
     "id": 2,
-    "title": "Парк Садського",
+    "title": "Парк Сацького",
     "slug": "park-sadskogo",
-    "description": "Проект реконструкції та благоустрою парку Садського з фокусом на збереження та відновлення історичного деревного фонду. Проект включав лікування вікових дерев, створення нових насаджень та ландшафтний дизайн.",
+    "description": "Проект реконструкції та благоустрою парку Сацького з фокусом на збереження пам`яті загиблих воїнів в наслідок російської агресії.",
     "mainImage": "assets/constructions/park-sadskogo/photo-1.JPG",
     "photos": [
       {
@@ -278,7 +278,7 @@
     "id": 4,
     "title": "Школа №62",
     "slug": "school-62",
-    "description": "Комплексна реконструкція школи №62 з метою створення сучасного освітнього середовища. Проект включав ремонт класів, оновлення спортивного залу, створення медіатеки та лабораторій.",
+    "description": "Комплексна реконструкція бомбосховища школи №62 з метою створення сучасного освітнього середовища. Проект включав створення учнівських кабінетів, із метою забезпечення навчання у безпечному місці.",
     "mainImage": "assets/constructions/school-62/photo-1.jpg",
     "photos": [
       {
@@ -315,7 +315,7 @@
     "id": 5,
     "title": "Лікарня №5",
     "slug": "bolnitsa-5",
-    "description": "Комплексна реконструкція лікарні №5 з метою покращення якості медичних послуг та підвищення комфорту пацієнтів. Проект включав ремонт палат, створення нових діагностичних кабінетів та реконструкцію інженерних систем.",
+    "description": "Комплексна реконструкція бомбосховища лікарні №5 з метою покращення якості медичних послуг та підвищення безпеки пацієнтів. Проект включав ремонт палат, створення нових діагностичних кабінетів та реконструкцію інженерних систем.",
     "mainImage": "assets/constructions/bolnitsa-5/photo-1.jpg",
     "photos": [
       {
@@ -468,7 +468,7 @@
     "id": 6,
     "title": "Школа №76",
     "slug": "school-76",
-    "description": "Комплексна реконструкція школи №76 з метою створення сучасного освітнього середовища. Проект включав ремонт класів, оновлення спортивного залу, створення медіатеки та лабораторій.",
+    "description": "Реконструкція бомбосховища школи №76 з метою створення безпечного освітнього середовища. Проект включав ремонт класів, створення нових місць для безпечного навчання.",
     "mainImage": "assets/constructions/school-76/photo-1.JPG",
     "photos": [
       {
@@ -634,7 +634,7 @@
     "id": 8,
     "title": "Школа №25",
     "slug": "school-25",
-    "description": "Комплексна реконструкція школи №25 з метою створення сучасного освітнього середовища. Проект включав ремонт класів, оновлення спортивного залу, створення медіатеки та лабораторій.",
+    "description": "Ремонт бомбосховища та дворику школи №25 з метою створення сучасного, безпечного, якісного освітнього середовища.",
     "mainImage": "assets/constructions/school-25/photo-1.JPG",
     "photos": [
       {
