Change featured section at the about page

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "Соборний 151",
     "slug": "soborny-151",
-    "description": "Проект модернізації бомбосховища міської лікарні №1. Включав оновлення фасаду, заміну комунікацій, перепланування та обладнання медичних кабінетів відповідно до сучасних вимог.",
+    "description": "Проект реконструкції історичної будівлі на вулиці Соборній, 151. Реставрація фасаду та внутрішніх приміщень із збереженням історичної цінності об'єкта.",
     "mainImage": "assets/constructions/soborny-151/photo-1.JPG",
     "status": "completed",
     "photos": [
@@ -179,7 +179,7 @@
     "id": 3,
     "title": "Лікарня №1",
     "slug": "bolnitsa-1",
-    "description": "Проект модернізації міської лікарні №1. Включав оновлення фасаду, заміну комунікацій, перепланування та обладнання медичних кабінетів відповідно до сучасних вимог.",
+    "description": "Проект модернізації бомбосховища міської лікарні №1. Включав оновлення фасаду, заміну комунікацій, перепланування та обладнання медичних кабінетів відповідно до сучасних вимог.",
     "mainImage": "assets/constructions/bolnitsa-1/photo-1.JPG",
     "status": "completed",
     "photos": [
