Fix photo paths at projects data

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -180,99 +180,99 @@
     "title": "Лікарня №1",
     "slug": "bolnitsa-1",
     "description": "Проект модернізації бомбосховища міської лікарні №1. Включав оновлення фасаду, заміну комунікацій, перепланування та обладнання медичних кабінетів відповідно до сучасних вимог.",
-    "mainImage": "assets/constructions/bolnitsa-1/photo-1.JPG",
+    "mainImage": "assets/constructions/bolnitsa-1/photo-1.jpg",
     "status": "completed",
     "photos": [
       {
-        "url": "assets/constructions/bolnitsa-1/photo-1.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-1.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-2.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-2.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-3.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-3.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-4.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-4.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-5.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-5.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-6.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-6.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-7.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-7.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-8.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-8.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-9.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-9.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-10.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-10.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-11.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-11.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-12.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-12.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-13.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-13.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-14.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-14.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-15.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-15.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-16.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-16.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-17.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-17.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-18.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-18.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-19.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-19.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-20.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-20.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-21.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-21.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-22.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-22.jpg",
         "alt": "Фото проекту лікарні №1"
       },
       {
-        "url": "assets/constructions/bolnitsa-1/photo-23.JPG",
+        "url": "assets/constructions/bolnitsa-1/photo-23.jpg",
         "alt": "Фото проекту лікарні №1"
       }
     ]
