Change about page

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,11 +12,11 @@
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-2.JPG",
+        "url": "assets/constructions/soborny-151/photo-2.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-3.JPG",
+        "url": "assets/constructions/soborny-151/photo-3.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
@@ -28,7 +28,7 @@
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-6.JPG",
+        "url": "assets/constructions/soborny-151/photo-6.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
@@ -56,11 +56,11 @@
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-13.JPG",
+        "url": "assets/constructions/soborny-151/photo-13.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-14.JPG",
+        "url": "assets/constructions/soborny-151/photo-14.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
@@ -72,7 +72,7 @@
         "alt": "Фото проекту Соборний 151"
       },
       {
-        "url": "assets/constructions/soborny-151/photo-17.JPG",
+        "url": "assets/constructions/soborny-151/photo-17.jpg",
         "alt": "Фото проекту Соборний 151"
       },
       {
