--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "capital-market",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "",
+  "homepage": "https://Greenfield-Taster.github.io/capital-market",
+  "bugs": {
+    "url": "https://github.com/Greenfield-Taster/capital-market/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Greenfield-Taster/capital-market.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "vite.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +23,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://Greenfield-Taster.github.io/capital-market",
   "dependencies": {
     "firebase": "^11.7.1",
     "gh-pages": "^6.3.0",
